chore(docs): add description custom meta for each pages
Closes #399

--- a/documentation/docs/01-introduction.mdx
+++ b/documentation/docs/01-introduction.mdx
@@ -1,6 +1,11 @@
 ---
 id: introduction
 title: Introduction
+description: |
+  Introduction and presentation of what is the Sonia-corporation stale action.
+  What is the mindset behind this action.
+  What are the main features.
+  How and why it was crated.
 tags:
   - Introduction
 ---
