--- a/documentation/docs/02-getting-started/02-workflow-testing.mdx
+++ b/documentation/docs/02-getting-started/02-workflow-testing.mdx
@@ -1,6 +1,10 @@
 ---
 id: workflow-testing
 title: Workflow testing
+description: |
+  Explanation to test a newly configured stale workflow so that it's safer for your project. 
+  The action can be risky if wrongly configured and may close all your issues for example.
+  The dry-run option is strongly suggested, but also the limit of operations.
 tags:
   - Getting started
   - Workflow testing
