--- a/documentation/docs/03-all-inputs.mdx
+++ b/documentation/docs/03-all-inputs.mdx
@@ -1,6 +1,9 @@
 ---
 id: all-inputs
 title: All inputs
+description: |
+  List all the inputs of this action.
+  Including common, issues and pull requests inputs.
 tags:
   - Common
   - Issues
