--- a/documentation/docs/04-all-outputs.mdx
+++ b/documentation/docs/04-all-outputs.mdx
@@ -1,6 +1,9 @@
 ---
 id: all-outputs
 title: All outputs
+description: |
+  List all the outputs of this action.
+  Including issues and pull requests outputs.
 tags:
   - Issues
   - Pull requests
