--- a/documentation/docs/05-github-token-input.mdx
+++ b/documentation/docs/05-github-token-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: github-token-input
 title: GitHub token input
+description: |
+  All the information you need to know about the GitHub token common input.
+  Including a detailed description and an example.
 tags:
   - Common
   - Inputs
