--- a/documentation/docs/06-dry-run-input.mdx
+++ b/documentation/docs/06-dry-run-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: dry-run-input
 title: Dry-run input
+description: |
+  All the information you need to know about the dry-run common input.
+  Including a detailed description and an example.
 tags:
   - Common
   - Inputs
