--- a/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
@@ -1,6 +1,8 @@
 ---
 id: all-issues-inputs
 title: All issues inputs
+description: |
+  List all the issues inputs of this action.
 tags:
   - Issues
   - Inputs
