--- a/documentation/docs/06-issues/01-inputs/03-ignore-all-labels-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/03-ignore-all-labels-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: issue-ignore-all-labels-input
 title: Ignore all issue labels input
+description: |
+  All the information you need to know about the ignore all issue labels input.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Inputs
