--- a/documentation/docs/06-issues/01-inputs/05-ignore-all-assignees-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/05-ignore-all-assignees-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: issue-ignore-all-assignees-input
 title: Ignore all issue assignees input
+description: |
+  All the information you need to know about the ignore all issue assignees input.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Inputs
