--- a/documentation/docs/06-issues/01-inputs/06-ignore-any-assignees-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/06-ignore-any-assignees-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: issue-ignore-any-assignees-input
 title: Ignore any issue assignees input
+description: |
+  All the information you need to know about the ignore any issue assignees input.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Inputs
