--- a/documentation/docs/06-issues/01-inputs/07-ignore-all-project-cards-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/07-ignore-all-project-cards-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: issue-ignore-all-project-cards-input
 title: Ignore all issue project cards input
+description: |
+  All the information you need to know about the ignore all issue project cards input.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Inputs
