--- a/documentation/docs/06-issues/01-inputs/09-ignore-before-creation-date-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/09-ignore-before-creation-date-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: issue-ignore-before-creation-date-input
 title: Ignore issue before creation date input
+description: |
+  All the information you need to know about the ignore issue before creation date input.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Inputs
