--- a/documentation/docs/06-issues/01-inputs/11-stale-comment-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/11-stale-comment-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: issue-stale-comment-input
 title: Stale issue comment input
+description: |
+  All the information you need to know about the stale issue comment input.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Inputs
