--- a/documentation/docs/06-issues/01-inputs/12-days-before-close-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/12-days-before-close-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: issue-days-before-close-input
 title: Days before issue close input
+description: |
+  All the information you need to know about the days before issue close input.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Inputs
