--- a/documentation/docs/06-issues/01-inputs/15-add-labels-after-close-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/15-add-labels-after-close-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: issue-add-labels-after-close-input
 title: Add issue labels after close input
+description: |
+  All the information you need to know about the add issue labels after close input.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Inputs
