--- a/documentation/docs/06-issues/01-inputs/16-processing-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/16-processing-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: issue-processing-input
 title: Issue processing input
+description: |
+  All the information you need to know about the issue processing input.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Inputs
