--- a/documentation/docs/06-issues/01-inputs/17-limit-api-queries-count-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/17-limit-api-queries-count-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: issue-limit-api-queries-count-input
 title: Issue limit api queries count input
+description: |
+  All the information you need to know about the issue limit api queries count input.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Inputs
