--- a/documentation/docs/06-issues/01-inputs/18-limit-api-mutations-count-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/18-limit-api-mutations-count-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: issue-limit-api-mutations-count-input
 title: Issue limit api mutations count input
+description: |
+  All the information you need to know about the issue limit api mutations count input.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Inputs
