--- a/documentation/docs/06-issues/02-outputs/01-all-outputs.mdx
+++ b/documentation/docs/06-issues/02-outputs/01-all-outputs.mdx
@@ -1,6 +1,8 @@
 ---
 id: all-issues-outputs
 title: All issues outputs
+description: |
+  List all the issues outputs of this action.
 tags:
   - Issues
   - Outputs
