--- a/documentation/docs/06-issues/02-outputs/02-processed-issues-count-output.mdx
+++ b/documentation/docs/06-issues/02-outputs/02-processed-issues-count-output.mdx
@@ -1,6 +1,9 @@
 ---
 id: processed-issues-count-output
 title: Processed issues count output
+description: |
+  All the information you need to know about the processed issues count output.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Outputs
