--- a/documentation/docs/06-issues/02-outputs/04-unaltered-issues-count-output.mdx
+++ b/documentation/docs/06-issues/02-outputs/04-unaltered-issues-count-output.mdx
@@ -1,6 +1,9 @@
 ---
 id: unaltered-issues-count-output
 title: Unaltered issues count output
+description: |
+  All the information you need to know about the unaltered issues count output.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Outputs
