--- a/documentation/docs/06-issues/02-outputs/08-close-issues-count-output.mdx
+++ b/documentation/docs/06-issues/02-outputs/08-close-issues-count-output.mdx
@@ -1,6 +1,9 @@
 ---
 id: close-issues-count-output
 title: Close issues count output
+description: |
+  All the information you need to know about the close issues count output.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Outputs
