--- a/documentation/docs/06-issues/02-outputs/13-called-api-issues-mutations-count-output.mdx
+++ b/documentation/docs/06-issues/02-outputs/13-called-api-issues-mutations-count-output.mdx
@@ -1,6 +1,9 @@
 ---
 id: called-api-issues-mutations-count-output
 title: Called api issues mutations count output
+description: |
+  All the information you need to know about the called api issues mutations count output.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Outputs
