--- a/documentation/docs/08-pull-requests/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/01-all-inputs.mdx
@@ -1,6 +1,8 @@
 ---
 id: all-pull-requests-inputs
 title: All pull requests inputs
+description: |
+  List all the pull requests inputs of this action.
 tags:
   - Pull requests
   - Inputs
