--- a/documentation/docs/08-pull-requests/01-inputs/02-stale-label-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/02-stale-label-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: pull-request-stale-label-input
 title: Stale pull request label input
+description: |
+  All the information you need to know about the stale pull request label input.
+  Including a detailed description and an example.
 tags:
   - Pull requests
   - Inputs
