--- a/documentation/docs/08-pull-requests/01-inputs/05-ignore-all-assignees-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/05-ignore-all-assignees-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: pull-request-ignore-all-assignees-input
 title: Ignore all pull request assignees input
+description: |
+  All the information you need to know about the ignore all pull request assignees input.
+  Including a detailed description and an example.
 tags:
   - Pull requests
   - Inputs
