--- a/documentation/docs/08-pull-requests/01-inputs/07-ignore-all-project-cards-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/07-ignore-all-project-cards-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: pull-request-ignore-all-project-cards-input
 title: Ignore all pull request project cards input
+description: |
+  All the information you need to know about the ignore all pull request project cards input.
+  Including a detailed description and an example.
 tags:
   - Pull requests
   - Inputs
