--- a/documentation/docs/08-pull-requests/01-inputs/16-add-labels-after-stale-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/16-add-labels-after-stale-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: pull-request-add-labels-after-stale-input
 title: Add pull request labels after stale input
+description: |
+  All the information you need to know about the add pull request labels after stale input.
+  Including a detailed description and an example.
 tags:
   - Pull requests
   - Inputs
