--- a/documentation/docs/08-pull-requests/01-inputs/17-add-labels-after-close-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/17-add-labels-after-close-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: pull-request-add-labels-after-close-input
 title: Add pull request labels after close input
+description: |
+  All the information you need to know about the add pull request labels after close input.
+  Including a detailed description and an example.
 tags:
   - Pull requests
   - Inputs
