--- a/documentation/docs/08-pull-requests/01-inputs/18-processing-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/18-processing-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: pull-request-processing-input
 title: Pull request processing input
+description: |
+  All the information you need to know about the pull request processing input.
+  Including a detailed description and an example.
 tags:
   - Pull requests
   - Inputs
