--- a/documentation/docs/08-pull-requests/01-inputs/19-to-draft-instead-of-stale-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/19-to-draft-instead-of-stale-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: pull-request-to-draft-instead-of-stale-input
 title: Pull request to draft instead of stale input
+description: |
+  All the information you need to know about the pull request to draft instead of stale input.
+  Including a detailed description and an example.
 tags:
   - Pull requests
   - Inputs
