--- a/documentation/docs/08-pull-requests/02-outputs/01-all-outputs.mdx
+++ b/documentation/docs/08-pull-requests/02-outputs/01-all-outputs.mdx
@@ -1,6 +1,8 @@
 ---
 id: all-pull-requests-outputs
 title: All pull requests outputs
+description: |
+  List all the pull requests outputs of this action.
 tags:
   - Pull requests
   - Outputs
