--- a/documentation/docs/08-pull-requests/02-outputs/02-processed-pull-requests-count-output.mdx
+++ b/documentation/docs/08-pull-requests/02-outputs/02-processed-pull-requests-count-output.mdx
@@ -1,6 +1,9 @@
 ---
 id: processed-pull-requests-count-output
 title: Processed pull requests count output
+description: |
+  All the information you need to know about the
+  Including a detailed description and an example.
 tags:
   - Pull requests
   - Outputs
