--- a/documentation/docs/08-pull-requests/02-outputs/04-unaltered-pull-requests-count-output.mdx
+++ b/documentation/docs/08-pull-requests/02-outputs/04-unaltered-pull-requests-count-output.mdx
@@ -1,6 +1,9 @@
 ---
 id: unaltered-pull-requests-count-output
 title: Unaltered pull requests count output
+description: |
+  All the information you need to know about the unaltered pull requests count output.
+  Including a detailed description and an example.
 tags:
   - Pull requests
   - Outputs
