--- a/documentation/docs/08-pull-requests/02-outputs/07-remove-stale-pull-requests-count-output.mdx
+++ b/documentation/docs/08-pull-requests/02-outputs/07-remove-stale-pull-requests-count-output.mdx
@@ -1,6 +1,9 @@
 ---
 id: remove-stale-pull-requests-count-output
 title: Remove stale pull requests count output
+description: |
+  All the information you need to know about the remove stale pull requests count output.
+  Including a detailed description and an example.
 tags:
   - Pull requests
   - Outputs
