--- a/documentation/docs/08-pull-requests/02-outputs/09-deleted-pull-requests-branches-count-output.mdx
+++ b/documentation/docs/08-pull-requests/02-outputs/09-deleted-pull-requests-branches-count-output.mdx
@@ -1,6 +1,9 @@
 ---
 id: deleted-pull-requests-branches-count-output
 title: Deleted pull requests branches count output
+description: |
+  All the information you need to know about the deleted pull requests branches count output.
+  Including a detailed description and an example.
 tags:
   - Pull requests
   - Outputs
