--- a/documentation/docs/08-pull-requests/02-outputs/10-added-pull-requests-comments-count-output.mdx
+++ b/documentation/docs/08-pull-requests/02-outputs/10-added-pull-requests-comments-count-output.mdx
@@ -1,6 +1,9 @@
 ---
 id: added-pull-requests-comments-count-output
 title: Added pull requests comments count output
+description: |
+  All the information you need to know about the added pull requests comments count output.
+  Including a detailed description and an example.
 tags:
   - Pull requests
   - Outputs
