--- a/documentation/docs/08-pull-requests/02-outputs/11-added-pull-requests-labels-count-output.mdx
+++ b/documentation/docs/08-pull-requests/02-outputs/11-added-pull-requests-labels-count-output.mdx
@@ -1,6 +1,9 @@
 ---
 id: added-pull-requests-labels-count-output
 title: Added pull requests labels count output
+description: |
+  All the information you need to know about the added pull requests labels count output.
+  Including a detailed description and an example.
 tags:
   - Pull requests
   - Outputs
