--- a/documentation/docs/08-pull-requests/02-outputs/12-draft-pull-requests-count-output.mdx
+++ b/documentation/docs/08-pull-requests/02-outputs/12-draft-pull-requests-count-output.mdx
@@ -1,6 +1,9 @@
 ---
 id: draft-pull-requests-count-output
 title: Draft pull requests count output
+description: |
+  All the information you need to know about the draft pull requests count output.
+  Including a detailed description and an example.
 tags:
   - Pull requests
   - Outputs
