--- a/documentation/docs/08-pull-requests/02-outputs/14-called-api-pull-requests-queries-count-output.mdx
+++ b/documentation/docs/08-pull-requests/02-outputs/14-called-api-pull-requests-queries-count-output.mdx
@@ -1,6 +1,9 @@
 ---
 id: called-api-pull-requests-queries-count-output
 title: Called api pull requests queries count output
+description: |
+  All the information you need to know about the called api pull requests queries count output.
+  Including a detailed description and an example.
 tags:
   - Pull requests
   - Outputs
