--- a/documentation/docs/10-statistics.mdx
+++ b/documentation/docs/10-statistics.mdx
@@ -1,6 +1,8 @@
 ---
 id: statistics
 title: Statistics
+description: |
+  All the things you need to know regarding how this action leverage and expose the statistics in the logs to give you insights over your workflow and how it performed.
 tags:
   - Logs
   - Statistics
