--- a/documentation/docs/02-getting-started/01-workflow-creation.mdx
+++ b/documentation/docs/02-getting-started/01-workflow-creation.mdx
@@ -1,6 +1,9 @@
 ---
 id: workflow-creation
 title: Workflow creation
+description: |
+  Explanation to create the stale action GitHub workflow and how to configure it. 
+  Contains also a suggestion regarding the cron job.
 tags:
   - Getting started
   - Workflow configuration
