--- a/documentation/docs/06-issues/01-inputs/02-stale-label-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/02-stale-label-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: issue-stale-label-input
 title: Stale issue label input
+description: |
+  All the information you need to know about the stale issue label input.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Inputs
