--- a/documentation/docs/06-issues/01-inputs/04-ignore-any-labels-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/04-ignore-any-labels-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: issue-ignore-any-labels-input
 title: Ignore any issue labels input
+description: |
+  All the information you need to know about the ignore any issue labels input.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Inputs
