--- a/documentation/docs/06-issues/01-inputs/10-days-before-stale-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/10-days-before-stale-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: issue-days-before-stale-input
 title: Days before issue stale input
+description: |
+  All the information you need to know about the days before issue stale input.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Inputs
