--- a/documentation/docs/06-issues/01-inputs/13-close-comment-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/13-close-comment-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: issue-close-comment-input
 title: Close issue comment input
+description: |
+  All the information you need to know about the close issue comment input.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Inputs
