--- a/documentation/docs/06-issues/01-inputs/14-add-labels-after-stale-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/14-add-labels-after-stale-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: issue-add-labels-after-stale-input
 title: Add issue labels after stale input
+description: |
+  All the information you need to know about the add issue labels after stale input.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Inputs
