--- a/documentation/docs/06-issues/02-outputs/03-ignored-issues-count-output.mdx
+++ b/documentation/docs/06-issues/02-outputs/03-ignored-issues-count-output.mdx
@@ -1,6 +1,9 @@
 ---
 id: ignored-issues-count-output
 title: Ignored issues count output
+description: |
+  All the information you need to know about the ignored issues count output.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Outputs
