--- a/documentation/docs/06-issues/02-outputs/06-already-stale-issues-count-output.mdx
+++ b/documentation/docs/06-issues/02-outputs/06-already-stale-issues-count-output.mdx
@@ -1,6 +1,9 @@
 ---
 id: already-stale-issues-count-output
 title: Already stale issues count output
+description: |
+  All the information you need to know about the already stale issues count output.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Outputs
