--- a/documentation/docs/06-issues/02-outputs/07-remove-stale-issues-count-output.mdx
+++ b/documentation/docs/06-issues/02-outputs/07-remove-stale-issues-count-output.mdx
@@ -1,6 +1,9 @@
 ---
 id: remove-stale-issues-count-output
 title: Remove stale issues count output
+description: |
+  All the information you need to know about the remove stale issues count output.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Outputs
