--- a/documentation/docs/06-issues/02-outputs/09-added-issues-comments-count-output.mdx
+++ b/documentation/docs/06-issues/02-outputs/09-added-issues-comments-count-output.mdx
@@ -1,6 +1,9 @@
 ---
 id: added-issues-comments-count-output
 title: Added issues comments count output
+description: |
+  All the information you need to know about the added issues comments count output.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Outputs
