--- a/documentation/docs/06-issues/02-outputs/10-added-issues-labels-count-output.mdx
+++ b/documentation/docs/06-issues/02-outputs/10-added-issues-labels-count-output.mdx
@@ -1,6 +1,9 @@
 ---
 id: added-issues-labels-count-output
 title: Added issues labels count output
+description: |
+  All the information you need to know about the added issues labels count output.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Outputs
