--- a/documentation/docs/06-issues/02-outputs/12-called-api-issues-queries-count-output.mdx
+++ b/documentation/docs/06-issues/02-outputs/12-called-api-issues-queries-count-output.mdx
@@ -1,6 +1,9 @@
 ---
 id: called-api-issues-queries-count-output
 title: Called api issues queries count output
+description: |
+  All the information you need to know about the called api issues queries count output.
+  Including a detailed description and an example.
 tags:
   - Issues
   - Outputs
