--- a/documentation/docs/08-pull-requests/01-inputs/03-ignore-all-labels-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/03-ignore-all-labels-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: pull-request-ignore-all-labels-input
 title: Ignore all pull request labels input
+description: |
+  All the information you need to know about the ignore all pull request labels input.
+  Including a detailed description and an example.
 tags:
   - Pull requests
   - Inputs
