--- a/documentation/docs/08-pull-requests/01-inputs/09-ignore-before-creation-date-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/09-ignore-before-creation-date-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: pull-request-ignore-before-creation-date-input
 title: Ignore pull request before creation date input
+description: |
+  All the information you need to know about the ignore pull request before creation date input.
+  Including a detailed description and an example.
 tags:
   - Pull requests
   - Inputs
