--- a/documentation/docs/08-pull-requests/01-inputs/11-days-before-stale-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/11-days-before-stale-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: pull-request-days-before-stale-input
 title: Days before pull request stale input
+description: |
+  All the information you need to know about the days before pull request stale input.
+  Including a detailed description and an example.
 tags:
   - Pull requests
   - Inputs
