--- a/documentation/docs/08-pull-requests/01-inputs/13-days-before-close-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/13-days-before-close-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: pull-request-days-before-close-input
 title: Days before pull request close input
+description: |
+  All the information you need to know about the days before pull request close input.
+  Including a detailed description and an example.
 tags:
   - Pull requests
   - Inputs
