--- a/documentation/docs/08-pull-requests/01-inputs/14-close-comment-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/14-close-comment-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: pull-request-close-comment-input
 title: Close pull request comment input
+description: |
+  All the information you need to know about the close pull request comment input.
+  Including a detailed description and an example.
 tags:
   - Pull requests
   - Inputs
