--- a/documentation/docs/08-pull-requests/01-inputs/15-delete-branch-after-close-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/15-delete-branch-after-close-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: pull-request-delete-branch-after-close-input
 title: Delete pull request branch after close input
+description: |
+  All the information you need to know about the delete pull request branch after close input.
+  Including a detailed description and an example.
 tags:
   - Pull requests
   - Inputs
