--- a/documentation/docs/08-pull-requests/01-inputs/20-limit-api-queries-count-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/20-limit-api-queries-count-input.mdx
@@ -1,6 +1,9 @@
 ---
 id: pull-request-limit-api-queries-count-input
 title: Pull request limit api queries count input
+description: |
+  All the information you need to know about the pull request limit api queries count input.
+  Including a detailed description and an example.
 tags:
   - Pull requests
   - Inputs
