--- a/documentation/docs/08-pull-requests/02-outputs/08-close-pull-requests-count-output.mdx
+++ b/documentation/docs/08-pull-requests/02-outputs/08-close-pull-requests-count-output.mdx
@@ -1,6 +1,9 @@
 ---
 id: close-pull-requests-count-output
 title: Close pull requests count output
+description: |
+  All the information you need to know about the close pull requests count output.
+  Including a detailed description and an example.
 tags:
   - Pull requests
   - Outputs
