feat(issues): add new input `issue-only-any-project-cards`
This new input allow to only process issues belonging to specific projects.
You can link your issues to a project card.
Pass as a multi-line input the names of your projects.
When this input is set, all issues without a project card will not be processed.
Note: this is the first input of this genre, but may not be the last based on people needs!
Closes #312, closes #412

--- a/documentation/docs/03-all-inputs.mdx
+++ b/documentation/docs/03-all-inputs.mdx
@@ -33,6 +33,7 @@ The list of all the inputs.
 | [issue-processing](issues/inputs/issue-processing-input)                                                        | Allow to process the issues.                                                                                                                           | `true`                |
 | [issue-limit-api-queries-count](issues/inputs/issue-limit-api-queries-count-input)                              | Limit the quantity of API queries calls performed during the processing of issues (-1 for unlimited).                                                  | `-1`                  |
 | [issue-limit-api-mutations-count](issues/inputs/issue-limit-api-mutations-count-input)                          | Limit the quantity of API mutations calls performed during the processing of issues (-1 for unlimited).                                                | `-1`                  |
+| [issue-only-any-project-cards](issues/inputs/issue-only-any-project-cards-input)                                | Only allow the processing of issues that contains one of those project cards (multiline).                                                              |                       |
 | [pull-request-stale-label](pull-requests/inputs/pull-request-stale-label-input)                                 | The label that will be added to the pull request when it is stale.                                                                                     | `stale`               |
 | [pull-request-ignore-all-labels](pull-requests/inputs/pull-request-ignore-all-labels-input)                     | Allow to ignore the processing of pull requests that contains any labels.                                                                              | `false`               |
 | [pull-request-ignore-any-labels](pull-requests/inputs/pull-request-ignore-any-labels-input)                     | Allow to ignore the processing of pull requests that contains one of those labels (multiline).                                                         |                       |
