--- a/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
@@ -28,3 +28,4 @@ The list of all issues the inputs.
 | [issue-processing](issue-processing-input)                                   | Allow to process the issues.                                                                                                                    | `true`  |
 | [issue-limit-api-queries-count](issue-limit-api-queries-count-input)         | Limit the quantity of API queries calls performed during the processing of issues (-1 for unlimited).                                           | `-1`    |
 | [issue-limit-api-mutations-count](issue-limit-api-mutations-count-input)     | Limit the quantity of API mutations calls performed during the processing of issues (-1 for unlimited).                                         | `-1`    |
+| [issue-only-any-project-cards](issue-only-any-project-cards-input)           | Only allow the processing of issues that contains one of those project cards (multiline).                                                       |         |
