refactor(docs): rename the issues examples page
The goal is to have multiple pages of examples.

--- a/documentation/docs/09-examples/01-with-comment-except-assigned.mdx
+++ b/documentation/docs/09-examples/01-with-comment-except-assigned.mdx
@@ -1,8 +1,12 @@
 ---
-id: issues-examples
-title: Issues configuration examples
+id: stale-with-comments-except-if-assigned-example
+title: Stale with comments except if assigned
+description: |
+  Example to stale all issues with a comment except if somebody is assigned.
 tags:
   - Issues
+  - Stale comments
+  - Assignees
   - Examples
 ---
 
