docs(website): add more tags to existing docs pages

--- a/documentation/docs/09-examples/01-with-comment-except-assigned.mdx
+++ b/documentation/docs/09-examples/01-with-comment-except-assigned.mdx
@@ -5,16 +5,20 @@ description: |
   Example to stale all issues with a comment except if somebody is assigned.
 tags:
   - Issues
-  - Stale comments
+  - Comments
   - Assignees
   - Examples
 ---
 
 ## Stale all issues with comments except if somebody is assigned {#stale-all-issues-with-comments-except-if-somebody-is-assigned}
 
+### Description
+
 The label `ìnactive` will be added on all issues without any activity during the last 45 days, except if someone is assigned to it or if this is either a frozen bug, a bug that need help or a confirmed bug.  
 A comment will also be added to warn the people about this.  
 If there is still no activity after two weeks, the issue will be closed and the `closed-due-to-inactivity` label will be added.
+
+### Example
 
 ```yml
 # ...
