--- a/documentation/docs/02-getting-started/01-workflow-creation.mdx
+++ b/documentation/docs/02-getting-started/01-workflow-creation.mdx
@@ -7,6 +7,7 @@ description: |
 tags:
   - Getting started
   - Workflow configuration
+  - Cron
 ---
 
 The first step to start with this stale action is to create your GitHub workflow.
