--- a/documentation/docs/09-examples/01-with-comment-except-assigned.mdx
+++ b/documentation/docs/09-examples/01-with-comment-except-assigned.mdx
@@ -12,13 +12,13 @@ tags:
 
 ## Stale all issues with comments except if somebody is assigned {#stale-all-issues-with-comments-except-if-somebody-is-assigned}
 
-### Description
+### Description {#description}
 
 The label `ìnactive` will be added on all issues without any activity during the last 45 days, except if someone is assigned to it or if this is either a frozen bug, a bug that need help or a confirmed bug.  
 A comment will also be added to warn the people about this.  
 If there is still no activity after two weeks, the issue will be closed and the `closed-due-to-inactivity` label will be added.
 
-### Example
+### Example {#example}
 
 ```yml
 # ...
