docs(fix): correctly highlight the examples
Closes #439

--- a/documentation/docs/06-issues/02-outputs/13-called-api-issues-mutations-count-output.mdx
+++ b/documentation/docs/06-issues/02-outputs/13-called-api-issues-mutations-count-output.mdx
@@ -20,7 +20,7 @@ This output will expose the number of GitHub API mutations calls performed for t
 
 ### Example {#example}
 
-```yml {6}
+```yml {6-7}
 # ...
 steps:
   - name: Stale
