--- a/documentation/docs/08-pull-requests/02-outputs/11-added-pull-requests-labels-count-output.mdx
+++ b/documentation/docs/08-pull-requests/02-outputs/11-added-pull-requests-labels-count-output.mdx
@@ -20,7 +20,7 @@ This output will expose the number of added pull requests labels.
 
 ### Example {#example}
 
-```yml {6}
+```yml {6-7}
 # ...
 steps:
   - name: Stale
