--- a/documentation/docs/06-issues/02-outputs/04-unaltered-issues-count-output.mdx
+++ b/documentation/docs/06-issues/02-outputs/04-unaltered-issues-count-output.mdx
@@ -20,7 +20,7 @@ This output will expose the number of issues unaltered (either not good to stale
 
 ### Example {#example}
 
-```yml {6}
+```yml {6-7}
 # ...
 steps:
   - name: Stale
