--- a/documentation/docs/06-issues/02-outputs/10-added-issues-labels-count-output.mdx
+++ b/documentation/docs/06-issues/02-outputs/10-added-issues-labels-count-output.mdx
@@ -20,7 +20,7 @@ This output will expose the number of added issues labels.
 
 ### Example {#example}
 
-```yml {6}
+```yml {6-7}
 # ...
 steps:
   - name: Stale
