--- a/documentation/docs/06-issues/02-outputs/11-called-api-issues-count-output.mdx
+++ b/documentation/docs/06-issues/02-outputs/11-called-api-issues-count-output.mdx
@@ -20,7 +20,7 @@ This output will expose the number of GitHub API calls performed for the issues.
 
 ### Example {#example}
 
-```yml {6}
+```yml {6-7}
 # ...
 steps:
   - name: Stale
