--- a/documentation/docs/08-pull-requests/02-outputs/04-unaltered-pull-requests-count-output.mdx
+++ b/documentation/docs/08-pull-requests/02-outputs/04-unaltered-pull-requests-count-output.mdx
@@ -20,7 +20,7 @@ This output will expose the number of pull requests unaltered (either not good t
 
 ### Example {#example}
 
-```yml {6}
+```yml {6-7}
 # ...
 steps:
   - name: Stale
