--- a/documentation/docs/08-pull-requests/02-outputs/13-called-api-pull-requests-count-output.mdx
+++ b/documentation/docs/08-pull-requests/02-outputs/13-called-api-pull-requests-count-output.mdx
@@ -20,7 +20,7 @@ This output will expose the number of GitHub API calls performed for the pull re
 
 ### Example {#example}
 
-```yml {6}
+```yml {6-7}
 # ...
 steps:
   - name: Stale
