--- a/documentation/docs/08-pull-requests/02-outputs/15-called-api-pull-requests-mutations-count-output.mdx
+++ b/documentation/docs/08-pull-requests/02-outputs/15-called-api-pull-requests-mutations-count-output.mdx
@@ -20,7 +20,7 @@ This output will expose the number of GitHub API mutations calls performed for t
 
 ### Example {#example}
 
-```yml {6}
+```yml {6-7}
 # ...
 steps:
   - name: Stale
