docs(blog): add new blog post to introduce the first inclusive input
Closes #458

--- a/documentation/blog/2022-01-20-first-website-draft/index.mdx
+++ b/documentation/blog/2022-01-20-first-website-draft/index.mdx
@@ -1,7 +1,8 @@
 ---
 slug: welcome
 title: Welcome!
-description: Welcome to the very first version of the Website!
+description: |
+  Welcome to the very first version of the Website!
 authors: [C0ZEN]
 tags: [stale, website, documentation, first draft]
 hide_table_of_contents: false
