docs(outputs): add tip about annotations
Closes #447

--- a/documentation/docs/04-all-outputs.mdx
+++ b/documentation/docs/04-all-outputs.mdx
@@ -40,3 +40,9 @@ The list of all the outputs.
 | [called-api-pull-requests-count](pull-requests/outputs/called-api-pull-requests-count-output)                     | The number of GitHub API calls performed for the pull requests.                    | `number` |
 | [called-api-pull-requests-queries-count](pull-requests/outputs/called-api-pull-requests-queries-count-output)     | The number of GitHub API queries calls performed for the pull requests.            | `number` |
 | [called-api-pull-requests-mutations-count](pull-requests/outputs/called-api-pull-requests-mutations-count-output) | The number of GitHub API mutations calls performed for the pull requests.          | `number` |
+
+:::info
+
+You can also retrieve those statistics in the [annotations](./annotations).
+
+:::
