--- a/documentation/docs/06-issues/02-outputs/01-all-outputs.mdx
+++ b/documentation/docs/06-issues/02-outputs/01-all-outputs.mdx
@@ -24,3 +24,9 @@ The list of all issues the outputs.
 | [called-api-issues-count](called-api-issues-count-output)                     | The number of GitHub API calls performed for the issues.                    | `number` |
 | [called-api-issues-queries-count](called-api-issues-queries-count-output)     | The number of GitHub API queries calls performed for the issues.            | `number` |
 | [called-api-issues-mutations-count](called-api-issues-mutations-count-output) | The number of GitHub API mutations calls performed for the issues.          | `number` |
+
+:::info
+
+You can also retrieve those statistics in the [annotations](../../annotations).
+
+:::
