--- a/documentation/docs/08-pull-requests/02-outputs/01-all-outputs.mdx
+++ b/documentation/docs/08-pull-requests/02-outputs/01-all-outputs.mdx
@@ -26,3 +26,9 @@ The list of all pull requests the outputs.
 | [called-api-pull-requests-count](called-api-pull-requests-count-output)                     | The number of GitHub API calls performed for the pull requests.                    | `number` |
 | [called-api-pull-requests-queries-count](called-api-pull-requests-queries-count-output)     | The number of GitHub API queries calls performed for the pull requests.            | `number` |
 | [called-api-pull-requests-mutations-count](called-api-pull-requests-mutations-count-output) | The number of GitHub API mutations calls performed for the pull requests.          | `number` |
+
+:::info
+
+You can also retrieve those statistics in the [annotations](../../annotations).
+
+:::
