docs(stats): add tip about annotations

--- a/documentation/docs/10-statistics.mdx
+++ b/documentation/docs/10-statistics.mdx
@@ -34,3 +34,9 @@ Pull rrequests statistics
 ├── Processed pull requests 5
 └── Ignored pull requests   5
 ```
+
+:::info
+
+You can also retrieve those statistics in the [annotations](./annotations).
+
+:::
