docs(footer): add a link on the footer to get some help
Closes #469

--- a/documentation/i18n/fr/docusaurus-theme-classic/footer.json
+++ b/documentation/i18n/fr/docusaurus-theme-classic/footer.json
@@ -42,5 +42,9 @@
   "link.item.label.Getting started": {
     "message": "Pour bien commencé",
     "description": "The label of footer link with label=Getting started linking to /docs/getting-started/workflow-creation"
+  },
+  "link.item.label.Need help?": {
+    "message": "Besoin d'aide ?",
+    "description": "The label of footer link with label=Need help? linking to /docs/need-help"
   }
 }
