docs(ui): change the brand name and the color scheme to follow Sonia style
The Sonia corporation is a big joke, it's not a corporation and is only about open-source stuff.
But having consistency between the different apps is cool, hence this change.
I am not fond of the pink colour, but whatever I am just bad regarding the design.
Closes #473

--- a/documentation/docs/13-badge.mdx
+++ b/documentation/docs/13-badge.mdx
@@ -15,12 +15,12 @@ We would gladly appreciate the publicity. :kissing_heart:
 
 ## Badge {#badge}
 
-[![triage: sonia stale](https://img.shields.io/badge/triage-sonia%20stale-ff69b4?link=https://github.com/Sonia-corporation/stale)](https://github.com/Sonia-corporation/stale)
+[![triage: sonia stale](https://img.shields.io/badge/triage-sonia%20stale-eb7b9c?link=https://github.com/Sonia-corporation/stale)](https://github.com/Sonia-corporation/stale)
 
 ## How to? {#how-to}
 
 Simply paste this code into your readme:
 
 ```markdown
-[![triage: sonia stale](https://img.shields.io/badge/triage-sonia%20stale-ff69b4?link=https://github.com/Sonia-corporation/stale)](https://github.com/Sonia-corporation/stale))
+[![triage: sonia stale](https://img.shields.io/badge/triage-sonia%20stale-eb7b9c?link=https://github.com/Sonia-corporation/stale)](https://github.com/Sonia-corporation/stale))
 ```
