--- a/documentation/i18n/fr/code.json
+++ b/documentation/i18n/fr/code.json
@@ -211,7 +211,7 @@
     "message": "Accueil",
     "description": "Home page title"
   },
-  "GitHub stale action website": {
+  "Sonia stale action website": {
     "message": "Site web de l'action GitHub stale",
     "description": "Home page description"
   },
