--- a/documentation/i18n/fr/docusaurus-theme-classic/navbar.json
+++ b/documentation/i18n/fr/docusaurus-theme-classic/navbar.json
@@ -1,6 +1,6 @@
 {
   "title": {
-    "message": "GitHub stale action",
+    "message": "Sonia stale action",
     "description": "The title in the navbar"
   },
   "item.label.Blog": {
