feat(prs): add new input `pull-request-only-any-project-cards`
This new input allow to only process prs belonging to specific projects.
You can link your prs to a project card.
Pass as a multi-line input the names of your projects.
When this input is set, all prs without a project card will not be processed.
Closes #416

--- a/documentation/docs/03-all-inputs.mdx
+++ b/documentation/docs/03-all-inputs.mdx
@@ -53,3 +53,4 @@ The list of all the inputs.
 | [pull-request-to-draft-instead-of-stale](pull-requests/inputs/pull-request-to-draft-instead-of-stale-input)     | Convert the pull request to a draft pull request instead of handling it as a stale candidate.                                                          | `false`               |
 | [pull-request-limit-api-queries-count](pull-requests/inputs/pull-request-limit-api-queries-count-input)         | Limit the quantity of API queries calls performed during the processing of pull requests (-1 for unlimited).                                           | `-1`                  |
 | [pull-request-limit-api-mutations-count](pull-requests/inputs/pull-request-limit-api-mutations-count-input)     | Limit the quantity of API mutations calls performed during the processing of pull requests (-1 for unlimited).                                         | `-1`                  |
+| [pull-request-only-any-project-cards](pull-requests/inputs/pull-request-only-any-project-cards-input)           | Only allow the processing of pull requests that contains one of those project cards (multiline).                                                       |                       |
