--- a/documentation/docs/06-issues/01-inputs/02-stale-label-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/02-stale-label-input.mdx
@@ -33,6 +33,11 @@ If not, the GitHub API will throw an error.
 
 :::
 
+### Cache {#cache}
+
+The label will be cached during the workflow.  
+This will reduce the number of calls made to the GitHub API, which will also reduce the quotas consumed for your GitHub token.
+
 ### Example {#example}
 
 ```yml {6}
