--- a/documentation/docs/08-pull-requests/01-inputs/20-limit-api-queries-count-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/20-limit-api-queries-count-input.mdx
@@ -15,7 +15,7 @@ tags:
 
 Name: `pull-request-limit-api-queries-count`  
 Type: `number`  
-Default value: `-1`
+Default value: `-1` (unlimited)
 
 ### Description {#description}
 
@@ -23,6 +23,12 @@ This input will let you define a limit count of pull requests API queries (read)
 If the limit is reached, the ongoing processed pull request will finish it's processing then all other pull requests will be ignored.  
 This can be useful when you want to play it safe with this action.  
 This can be also very useful if you have a lot of pull requests to process, and you want to limit the quotas of your associated [GitHub token](../../github-token-input).
+
+:::info
+
+When the value is below `0`, the input will have no effect.
+
+:::
 
 ### Cache {#cache}
 
