docs(troubleshooting): add a new page to help troubleshooting
Including information about GitHub token missing permissions.

--- a/documentation/docs/06-issues/01-inputs/17-limit-api-queries-count-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/17-limit-api-queries-count-input.mdx
@@ -33,7 +33,7 @@ When the value is below `0`, the input will have no effect.
 ### Cache {#cache}
 
 Some queries are cached during the workflow when loading static resources like the labels.  
-This will reduce the number of calls made to the GitHub API, which will also reduce the quotas consumed for your GitHub token.
+This will reduce the number of calls made to the GitHub API, which will also reduce the quotas consumed for your GitHub token, avoiding reaching rate limits.
 
 ### Example {#example}
 
