--- a/documentation/docs/08-pull-requests/01-inputs/02-stale-label-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/02-stale-label-input.mdx
@@ -43,7 +43,7 @@ You may find useful to [convert your pull requests to draft](pull-request-to-dra
 ### Cache {#cache}
 
 The label will be cached during the workflow.  
-This will reduce the number of calls made to the GitHub API, which will also reduce the quotas consumed for your GitHub token.
+This will reduce the number of calls made to the GitHub API, which will also reduce the quotas consumed for your GitHub token, avoiding reaching rate limits.
 
 ### Example {#example}
 
